aply reducer in form alcaldia 26/10/22

--- a/06-reducer/public/index.html
+++ b/06-reducer/public/index.html
@@ -5,13 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Agenda de contactos y Reducer" />
+    <meta name="description" content="App Agenda + Reducer" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!-- boostrap -->
-    <!-- CSS only -->
+     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+     <!-- bootstrap      -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <title>Agenda en React + Reducer</title>
+    <title>Agenda + Reducer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
